--- a/app/src/main/res/layout/shape_item.xml
+++ b/app/src/main/res/layout/shape_item.xml
@@ -6,11 +6,12 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
-    android:background="@color/black">
+    android:background="@color/dark">
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:backgroundTint="@color/sgreen">
     <ImageView
         android:id="@+id/shape_image_list"
         android:layout_width="50dp"
@@ -25,7 +26,8 @@
         android:paddingStart="20dp"
         android:layout_marginLeft="100dp"
         android:text="Shape Name"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textColor="@color/black"/>
 
 </androidx.cardview.widget.CardView>
 
