--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark">#1C1E1E</color>
+    <color name="red">#d64550</color>
+    <color name="sgreen">#daefb3</color>
+    <color name="logo">#F6F939</color>
 </resources>
